Related: tdf#166627 Write font-face-src for each mention of embedded font

Before commit e61a179b4ff8ce2072c3c0780628eb38c7a43529 (tdf#166627: embed
fonts everywhere we emit font data, 2025-05-23),  embedding of fonts only
happened during export of content.xml, to avoid complexity of shared data
between different instances of SvXMLExport, created separately per stream.

The said commit introduced a way to pass the data between these instances,
and embedding now is done by any SvXMLExport instance  that needs to emit
font-face-decls. Currently, only the first declaration of a used embedded
font gets its font-face-src.

But this is wrong, when the same embedded font in another stream, where it
is also used, does not reference its files.  This patch allows all streams
to emit font-face-src for all fonts used in it. File duplication in ZIP is
avoided by passing the embedded file information between SvXMLExport, with
font file hash and its path in ZIP, instead of font names.

Change-Id: I7a62e50c086d8741dbc8aadf61d0f008bad916ff
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185720
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>